<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".alarma">

    <EditText
        android:id="@+id/txtdroga"
        android:layout_width="309dp"
        android:layout_height="68dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/txtdroga"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textColorHint="#F2FF72"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/txtdescripcion"
        android:layout_width="294dp"
        android:layout_height="178dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtdescripcion"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="#F4E55D"
        android:textColorHint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <EditText
        android:id="@+id/hora"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/hora"
        android:inputType="textPersonName"
        android:textColorHint="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdescripcion"
        app:layout_constraintVertical_bias="0.543" />

    <EditText
        android:id="@+id/minuto"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/minuto"
        android:inputType="textPersonName"
        android:textColorHint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/hora"
        app:layout_constraintTop_toBottomOf="@+id/txtdescripcion"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/btnalarma"
        android:layout_width="150dp"
        android:layout_height="68dp"
        android:background="#DFB10D"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="screen"
        android:hint="@string/btnalarma"
        android:text="@string/btnalarma"
        android:textColor="#FFC107"
        android:textColorHighlight="#F1B110"
        android:textColorHint="#CFBC13"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdescripcion"
        app:layout_constraintVertical_bias="0.831"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtinfo"
        android:layout_width="243dp"
        android:layout_height="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtinfo"
        android:textAlignment="center"
        android:textColor="#F6DB2E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />
</androidx.constraintlayout.widget.ConstraintLayout>